# rusty-makepad

./: AGENTS.md  Cargo.toml  README.md
crates/rusty-makepad-settings/: Cargo.toml
crates/rusty-makepad-settings-cli/: Cargo.toml
crates/rusty-makepad-settings-cli/src/: main.rs
crates/rusty-makepad-settings/src/: lib.rs
docs/: ARCHITECTURE.md  PROVENANCE.md  VALIDATION.md
fixtures/: README.md
fixtures/damaged/: duplicate-setting-id.surface.json  invalid-range.profile.json  unknown-profile-setting.profile.json
fixtures/hotload/: mesh-replay-hotload.proposal.json
fixtures/profiles/: mesh-replay-fast.profile.json
fixtures/settings/: makepad-app-surface.json
tools/: Test-MakepadSettingsSurface.ps1  check_all.ps1  check_makepad_boundaries.py
