[package]
name = "rusty-makepad-settings-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusty-makepad-settings = { path = "../rusty-makepad-settings" }
serde_json = "1"

[lints]
workspace = true

